1️⃣  V.1.7 🎉 Applied styles on all forms and emails  ✅ | Translate, styles, file attached ...  🎉

--- a/api/views/rj11Email.handlebars
+++ b/api/views/rj11Email.handlebars
@@ -493,7 +493,7 @@ text-decoration: none;
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
 					                
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					              </ul>
                       </td>
                     </tr>
