--- a/api/views/rj14Email.handlebars
+++ b/api/views/rj14Email.handlebars
@@ -394,7 +394,7 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>¡ {{agencyName}} ha confirmado que vas a alquilar la propiedad en {{rentalAddress}} !</h3>
+		              	<h3>¡{{agencyName}} ha confirmado que vas a alquilar la propiedad en {{rentalAddress}}!</h3>
 
 		            	</div>
 		          </tr><!-- end: tr -->
@@ -421,7 +421,7 @@ text-decoration: none;
 							<div class="text" style="padding: 1em 3em; text-align: left;">
 								
 								<h3>Regístrate con tu tarjeta de débito. La tarjeta debe estar conectada con la cuenta donde recibes tus ingresos.</h3>
-								<h4>Sólo en caso que hubieran daños en el inmueble o impagos, los importes serán cargados en esta misma tarjeta.</h4>
+								<h3>Sólo en caso que hubieran daños en el inmueble o impagos, los importes serán cargados en esta misma tarjeta.</h3>
 								
 							</div>
 						</td>
@@ -500,7 +500,7 @@ text-decoration: none;
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					                
 					              </ul>
                       </td>
