--- a/api/views/rj16Email.handlebars
+++ b/api/views/rj16Email.handlebars
@@ -394,9 +394,9 @@ text-decoration: none;
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>¡Te confirmamos que <b>{{tenantName}}</b> ha registrado correctamente su tarjeta en Rimbo!</h3>
+		              	<h3>¡Te confirmamos que <b>{{tenantsName}}</b> ha registrado correctamente su tarjeta en Rimbo!</h3>
 
-						<p>¡Puedes ponerte en contacto con {{tenantName}} para continuar con la firma del contrato de alquiler!</p>
+						<p>¡Puedes ponerte en contacto con {{tenantsName}} para continuar con la firma del contrato de alquiler!</p>
 		            	</div>
 		          </tr><!-- end: tr -->
 					<td valign="middle" class="hero hero-2 bg_white" style="padding: 1em 0;">
@@ -497,7 +497,7 @@ text-decoration: none;
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
 					                
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					              </ul>
                       </td>
                     </tr>
