--- a/api/views/rj3Email.handlebars
+++ b/api/views/rj3Email.handlebars
@@ -361,7 +361,7 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hola {{agencyContactPerson}}</h3>				
+							<h3>Hola {{agencyContactPerson}},</h3>				
             				<h3>Gracias por registrar a tu inquilino en Rimbo.rent. <br/>Hemos recibido correctamente todos los datos.</h3>
             			</div>
             		</td>
@@ -387,11 +387,11 @@ a{
 								
 								<ul>
                                     <li>Nombre completo del inquilino: {{tenantsName}}</li>
-                                    <li>TNúmero de teléfono del inquilino: {{tenantsPhone}}</li>
+                                    <li>Número de teléfono del inquilino: {{tenantsPhone}}</li>
                                     <li>Correo electrónico del inquilino: {{tenantsEmail}}</li>
                                     <li>Alquiler mensual: {{rentAmount}}€</li>
                                     <li>Servicio escogido: {{product}}</li>
-                                    <li>Duración del contrato: {{rentDuration}} years</li>
+                                    <li>Duración del contrato: {{rentDuration}} años</li>
                                     <li>Dirección del apartamento: {{rentalAddress}}</li>
                                     <li>Código postal del apartamento: {{rentalPostalCode}}</li>
                                     <li>Ciudad del apartamento: {{rentalCity}}</li>
@@ -433,9 +433,9 @@ a{
 								
 								<h3>Tan pronto como se realice la evaluación, nos pondremos en contacto contigo para completar el proceso de alquiler de esta propiedad.</h3>
 
-								<p>Por favor, comprueba tu correo electrónico en las próximas horas.</p>
+								<h4>Por favor, comprueba tu correo electrónico en las próximas horas.</h4>
 
-								<p>¡A partir de ahora, gestionar este alquiler será más seguro y rápido que nunca!</p>
+								<h4>¡A partir de ahora, gestionar este alquiler será más seguro y rápido que nunca!</h4>
 
 
 								
@@ -499,7 +499,7 @@ a{
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					                
 					              </ul>
                       </td>
