--- a/api/views/rj4Email.handlebars
+++ b/api/views/rj4Email.handlebars
@@ -377,7 +377,7 @@ a{
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>Hola <b>{{tenantsName}}</b></h3>
+							<h3>Hola <b>{{tenantsName}},</b></h3>
             			</div>
             		</td>
             	</tr>
@@ -415,7 +415,8 @@ a{
 					<tr>
 						<td>
 							<div class="text" style="padding: 1em 3em; text-align: left;">
-								<h3>{{agencyName}}se ha unido a Rimbo para hacer tu alquiler más fácil. Suena genial, ¿no?</h3>
+								<h3>{{agencyName}} se ha unido a Rimbo para hacer tu alquiler más fácil.</h3>
+								<h3>Suena genial, ¿no?</h3>
 							</div>
 						</td>
 					</tr>
@@ -521,6 +522,7 @@ a{
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
+									<li><a href="https://badi.com/">Badi</a></li>
 					                
 					                
 					              </ul>
