--- a/api/views/rj9Email.handlebars
+++ b/api/views/rj9Email.handlebars
@@ -380,7 +380,7 @@ text-decoration: none;
             	<tr>
             		<td>
             			<div class="text" style="padding: 0 3em; text-align: center;">
-							<h3>¡Gracias,{{tenantsName}}!</h3>		
+							<h3>¡Gracias {{tenantsName}}!</h3>		
             			</div>
             		</td>
             	</tr>
@@ -506,8 +506,7 @@ text-decoration: none;
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
-					                
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					              </ul>
                       </td>
                     </tr>
