--- a/api/views/rjdEmail.handlebars
+++ b/api/views/rjdEmail.handlebars
@@ -413,7 +413,7 @@ a{
                                 <ul>
                                     <li>Alquiler mensual: {{rentAmount}}€</li>
                                     <li>Servicio escogido: {{product}}</li>
-                                    <li>Duración del contrato: {{rentDuration}} years</li>
+                                    <li>Duración del contrato: {{rentDuration}} años</li>
                                     <li>Dirección del apartamento: {{rentalAddress}}</li>
                                     <li>Ciudad: {{rentalCity}}</li>
                                     <li>Código postal del apartamento: {{rentalPostalCode}}</li>
@@ -461,7 +461,7 @@ a{
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					                
 					              </ul>
                       </td>
