--- a/api/views/rjsEmail.handlebars
+++ b/api/views/rjsEmail.handlebars
@@ -398,7 +398,7 @@ li {
 		          <tr>
 		            <td class="bg_white email-section">
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
-		              	<h3>We inform you that {{agencyName}} has confirmed that the rental at {{rentalAddress}} of {{tenantsName}} has been completed successfully and <b>the Annex of Rimbo and SEPA order is attached (see additional email).</b></h3>
+		              	
 
 						  <h3>Te informamos que {{agencyName}} ha confirmado que el alquiler en {{rentalAddress}} de {{tenantsName}} se ha completado con éxito y <b>se adjunta el Anexo de Rimbo justo debajo.</b></h3>
 
@@ -515,7 +515,7 @@ li {
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					                
 					              </ul>
                       </td>
