--- a/api/views/rjxx4Email.handlebars
+++ b/api/views/rjxx4Email.handlebars
@@ -471,7 +471,7 @@ a{
                       	<h3 class="heading">Useful Links</h3>
                       	<ul>
 					                <li><a href="http://www.rimbo.rent">Rimbo Rent</a></li>
-					                
+					                <li><a href="https://badi.com/">Badi</a></li>
 					                
 					              </ul>
                       </td>
