--- a/client/src/components/RegisterTenancy/register-user.module.scss
+++ b/client/src/components/RegisterTenancy/register-user.module.scss
@@ -2,7 +2,7 @@
 @import "../../styles/breakpoint";
 
 .RegisterContainer {
-  min-height: calc(100vh - 140px);
+  min-height: calc(100vh - 180px);
   @include xl {
     display: flex;
     flex-direction: column;
@@ -92,7 +92,7 @@
   text-align: center;
   @include xl {
     margin: 1.5rem 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 1rem;
     font-weight: 500;
     text-align: center;
@@ -100,6 +100,11 @@
 
   p {
     margin-bottom: 0.5rem;
+    padding: 0 2rem;
+    @include xl {
+      margin-bottom: 0.5rem;
+      padding: 0 4rem;
+    }
   }
   span {
     font-weight: 600 !important;
@@ -109,10 +114,12 @@
 
 .FormContent {
   display: flex;
+  // width: 100%;
+  height: 100%;
   flex-direction: column;
   justify-content: flex-start;
   margin: 0 3rem;
-  margin-top: 1rem;
+  margin-top: 4rem;
   flex: 1 0 auto;
   padding: 2rem 2rem;
   border-radius: 14px;
@@ -283,51 +290,48 @@
 }
 
 .CompleteContainer {
-  margin: 0 auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  margin: 0 auto;
+
+  height: 75vh;
+  @include xl {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 0 auto;
+
+    background-color: white;
+    height: 80vh;
+  }
+}
+
+.CompleteText {
+  margin: 0 auto;
+  color: black;
   @include xl {
     margin: 0 auto;
-    display: flex;
-    line-height: 2rem;
-    flex-direction: column;
-    justify-content: center;
+    color: black;
   }
-
   h1 {
-    font-size: 2.2rem;
-    text-align: center;
-    color: $primary-color;
-
-    @include xl {
-      color: $primary-color;
-      font-size: 2rem;
-    }
+    margin-bottom: 1.5rem;
+    font-size: 3.5rem;
+    font-weight: 400;
   }
   h3 {
+    margin-bottom: 3rem;
     font-size: 2rem;
-    margin-top: 3rem;
-    text-align: justify;
-    text-justify: inter-word;
-    @include xl {
-      margin-top: 2rem;
-      line-height: 2rem;
-      text-align: center;
-      font-size: 1.5rem;
-    }
+    font-weight: 300;
   }
   p {
-    margin-top: 3rem;
-    font-size: 1.7rem;
-    line-height: 2rem;
-    text-align: justify;
-    text-justify: inter-word;
-    @include xl {
-      margin-top: 2rem;
-      text-align: center;
-      font-size: 1.2rem;
-    }
+    font-size: 1.3rem;
+    margin-bottom: 2rem;
+    font-weight: 400;
   }
 }
 
@@ -338,7 +342,7 @@
   align-items: center;
   text-align: center;
   @include xl {
-    padding: 0rem 3rem;
+    padding: 2rem 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
