1️⃣  V.1.8 🎉 Applied styles on all forms and emails V2  ✅ | Translate, styles, file attached ...  🎉

--- a/api/views/rj11Email.handlebars
+++ b/api/views/rj11Email.handlebars
@@ -404,7 +404,7 @@ text-decoration: none;
                          <td class="bg_white email-section">
                             <div class="heading-section" style="text-align: center; padding: 0 30px; color: #6aa3a1;">
 								<h2>¡Es hora de que tomes la decisión final! Recuerda que solo debes aprobar un inquilino por propiedad. </h2>
-                                <h2>¿Es esta la persona que va a alquilar la propiedad?</h2>
+                                <h3>¿Es esta la persona que va a alquilar la propiedad?</h3>
                                 <h4>Para continuar con el proceso de alquiler, haz clic en el botón "Aprobar" a continuación y confirma que {{tenantName}} está seleccionado.</h4>            
                                 </div>
                         </tr><!-- end: tr -->
@@ -418,9 +418,9 @@ text-decoration: none;
 								
 								<h3>¡Nos pondremos en contacto con el inquilino para completar el registro!</h3>
 
-                                <h4>¡Tan pronto como el inquilino registre su tarjeta en Rimbo nos pondremos en contacto contigo!</h4>
+                                <h3>¡Tan pronto como el inquilino registre su tarjeta en Rimbo nos pondremos en contacto contigo!</h3>
 
-								<h4>Mientras tanto, siempre puedes ponerte en contacto con nosotros en info@rimbo.rent!</h4>
+								<h3>Mientras tanto, siempre puedes ponerte en contacto con nosotros en info@rimbo.rent!</h3>
 								
 							</div>
 						</td>
@@ -436,9 +436,9 @@ text-decoration: none;
 
                         <button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/pm/rejected">Rechazar(DEV)</a></button>
 
-						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!(PROD)</a></button>
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-test.ew.r.appspot.com/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!(PROD)</a></button>
 
-                        <button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/pm/rejected">Rechazar(PROD)</a></button>
+                        <button class='btn-rimbo' type="button"><a href="https://rimbo-test.ew.r.appspot.com/register/rj2/{{tenancyID}}/pm/rejected">Rechazar(PROD)</a></button>
 
 						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj2/{{tenancyID}}/pm/approved">¡Aprobar!(PROD2)</a></button>
 
