--- a/api/views/rjdEmail.handlebars
+++ b/api/views/rjdEmail.handlebars
@@ -409,7 +409,7 @@ a{
                                     <li>Email: {{tenantsEmail}}</li>
                                     <li>Número de teléfono: {{tenantsPhone}}</li>
                                 </ul>
-								<h3>PInformación del apartamento:</h3>
+								<h3>Información del apartamento:</h3>
                                 <ul>
                                     <li>Alquiler mensual: {{rentAmount}}€</li>
                                     <li>Servicio escogido: {{product}}</li>
