--- a/api/views/rj16Email.handlebars
+++ b/api/views/rj16Email.handlebars
@@ -237,7 +237,7 @@ a{
 } */
 .heading-section h2{
 	color: #6aa3a1;
-	font-size: 28px;
+	font-size: 22px;
 	margin-top: 0;
 	line-height: 1.4;
 	font-weight: 400;
@@ -396,7 +396,7 @@ text-decoration: none;
 		            	<div class="heading-section" style="text-align: center; padding: 0 30px;">
 		              	<h3>¡Te confirmamos que <b>{{tenantsName}}</b> ha registrado correctamente su tarjeta en Rimbo!</h3>
 
-						<p>¡Puedes ponerte en contacto con {{tenantsName}} para continuar con la firma del contrato de alquiler!</p>
+						<h3>¡Puedes ponerte en contacto con {{tenantsName}} para continuar con la firma del contrato de alquiler!</h3>
 		            	</div>
 		          </tr><!-- end: tr -->
 					<td valign="middle" class="hero hero-2 bg_white" style="padding: 1em 0;">
@@ -442,7 +442,7 @@ text-decoration: none;
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
 		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/annex/{{tenancyID}}">Subir Documentación(DEV)</a></button>
 
-						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/annex/{{tenancyID}}">Subir Documentación(PROD)</a></button>
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-test.ew.r.appspot.com/register/annex/{{tenancyID}}">Subir Documentación(PROD)</a></button>
 
 						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/annex/{{tenancyID}}">Subir Documentación(PROD2)</a></button>
 						  
