--- a/api/views/rj4Email.handlebars
+++ b/api/views/rj4Email.handlebars
@@ -468,7 +468,7 @@ a{
 		            	<div class="heading-section" style="text-align: center; padding: 0px 30px; color: #6aa3a1;">
 		              	<button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/tenant/{{randomID}}">Me quiero unir (DEV)</a></button>
 
-						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/tenant/{{randomID}}">Me quiero unir(PROD)</a></button>
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-test.ew.r.appspot.com/register/tenant/{{randomID}}">Me quiero unir(PROD)</a></button>
 
 						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/tenant/{{randomID}}">Me quiero unir(PROD2)</a></button>
 						  
