--- a/api/views/rjxx3FilesEmail.handlebars
+++ b/api/views/rjxx3FilesEmail.handlebars
@@ -462,9 +462,9 @@ a{
                         <button class='btn-rimbo' type="button"><a href="http://localhost:3000/register/rj2/{{tenancyID}}/rejected">¡Rechazar!(DDEV)</a></button>
 
 
-						<button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/approved">¡Aprobar!(PROD)</a></button>
+						<button class='btn-rimbo' type="button"><a href="https://rimbo-test.ew.r.appspot.com/register/rj2/{{tenancyID}}/approved">¡Aprobar!(PROD)</a></button>
 
-                        <button class='btn-rimbo' type="button"><a href="https://rimbo-badi.oa.r.appspot.com/register/rj2/{{tenancyID}}/rejected">¡Rechazar!(PROD)</a></button>
+                        <button class='btn-rimbo' type="button"><a href="https://rimbo-test.ew.r.appspot.com/register/rj2/{{tenancyID}}/rejected">¡Rechazar!(PROD)</a></button>
 
 
 						<button class='btn-rimbo' type="button"><a href="https://badi.rimbo.rent/register/rj2/{{tenancyID}}/approved">¡Aprobar!(PROD2)</a></button>
