--- a/client/src/components/NavBar/navbar.module.scss
+++ b/client/src/components/NavBar/navbar.module.scss
@@ -30,5 +30,9 @@
   .LanguageLogo {
     margin: 0 0 !important;
     height: 2rem !important;
+    @include xl {
+      margin: 0 0 !important;
+      height: 1rem !important;
+    }
   }
 }
