--- a/client/src/components/RegisterTenancy/register-user.module.scss
+++ b/client/src/components/RegisterTenancy/register-user.module.scss
@@ -28,14 +28,16 @@
   }
 
   h1 {
+    margin: 0 auto;
     font-size: 2.5rem;
     margin-top: 2rem;
     margin-bottom: 1rem;
+    width: 70%;
 
     @include xl {
       margin-top: 1rem;
       margin-bottom: 1rem;
-      font-size: 3rem;
+      font-size: 2rem;
       font-weight: 400;
       padding: 0 10rem;
     }
@@ -49,7 +51,7 @@
     @include xl {
       margin-top: 1rem;
       margin-bottom: 1rem;
-      font-size: 2rem;
+      font-size: 1.5rem;
       font-weight: 600;
       padding: 0 20rem;
     }
@@ -64,7 +66,7 @@
     @include xl {
       margin: 0 auto;
       margin-bottom: 1rem;
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: 300;
       color: $danger;
       text-align: center;
@@ -77,7 +79,7 @@
 
     @include xl {
       padding-bottom: 0rem;
-      font-size: 1.5rem;
+      font-size: 1rem;
     }
   }
   h4 span {
@@ -104,6 +106,7 @@
     @include xl {
       margin-bottom: 0.5rem;
       padding: 0 4rem;
+      width: 75%;
     }
   }
   span {
@@ -209,7 +212,7 @@
     @include xl {
       color: $primary-color;
       font-weight: 600;
-      font-size: 1.3rem;
+      font-size: 1rem;
       outline: none;
     }
   }
@@ -219,7 +222,7 @@
     border-radius: 20px;
     border: 1px solid $tertiary-color;
     background-color: none;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     margin-top: 1rem;
     color: rgba(2, 2, 2, 0.575);
     background-color: white;
@@ -232,7 +235,7 @@
       border-radius: 20px;
       border: 1px solid $tertiary-color;
       background-color: none;
-      font-size: 1rem;
+      font-size: 0.8rem;
       margin-top: 1rem;
       color: rgba(2, 2, 2, 0.575);
       background-color: white;
@@ -281,6 +284,7 @@
     font-size: 1.2rem;
     @include xl {
       text-align: left;
+      font-size: 1rem;
     }
   }
   a {
@@ -307,7 +311,7 @@
     margin: 0 auto;
 
     background-color: white;
-    height: 80vh;
+    height: 77.7vh;
   }
 }
 
@@ -320,16 +324,16 @@
   }
   h1 {
     margin-bottom: 1.5rem;
-    font-size: 3.5rem;
+    font-size: 2rem;
     font-weight: 400;
   }
   h3 {
     margin-bottom: 3rem;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 300;
   }
   p {
-    font-size: 1.3rem;
+    font-size: 1rem;
     margin-bottom: 2rem;
     font-weight: 400;
   }
@@ -386,7 +390,7 @@
     @include xl {
       margin-bottom: 1.5rem;
       font-weight: 400;
-      font-size: 1.2rem;
+      font-size: 1rem;
       text-align: center;
       text-decoration: underline;
     }
@@ -511,11 +515,11 @@
   }
   h2 {
     margin-bottom: 3rem;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 300;
   }
   p {
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 400;
   }
 }
