2️⃣  V.2.4 🎉 Fixed bug on files in payslip  ✅ | Translate pages, emails, attached files, logo rimbo at end 🎉

--- a/api/views/rjxx3FilesEmailEn.handlebars
+++ b/api/views/rjxx3FilesEmailEn.handlebars
@@ -435,7 +435,8 @@ a{
                                 <ul>
                                     <li>ID Document Front: {{documentImageFront}}</li>
                                     <li>ID Document Back: {{documentImageBack}}</li>
-                                    <li>Confirm Address: {{documentConfirmAddress}} </li>
+                                    <li>Last Payslip: {{lastPayslip}} </li>
+                                    <li>Previous Payslip: {{previousPayslip}} </li>
                                    
                                 </ul>
                                 
