--- a/api/views/rjsEmailEn.handlebars
+++ b/api/views/rjsEmailEn.handlebars
@@ -373,7 +373,7 @@ li {
           	<table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
           		<tr>
           			<td class="logo" style="text-align: center;">
-			            <img class='logo-image' src="cid:rimbologo"><a href="https://rimbo.rent/"></a></img>
+			            <img class='logo-image' src="cid:badilogo"><a href="https://badi.com/"></a></img>
 			          </td>
           		</tr>
           	</table>
