--- a/client/src/components/RegisterTenancy/register-user.module.scss
+++ b/client/src/components/RegisterTenancy/register-user.module.scss
@@ -523,3 +523,41 @@
     font-weight: 400;
   }
 }
+
+.GoogleSuggestionContainer {
+  position: absolute;
+  background-color: white;
+  -webkit-box-shadow: 0px 0px 7px 0px #000000;
+  box-shadow: 0px 0px 7px 0px #000000;
+  margin-top: -2rem;
+  margin-bottom: 2rem;
+  @include xl {
+    position: absolute;
+    background-color: white;
+    -webkit-box-shadow: 0px 0px 7px 0px #000000;
+    box-shadow: 0px 0px 7px 0px #000000;
+    margin-top: -2rem;
+    margin-bottom: 2rem;
+  }
+}
+
+.GoogleSuggestion {
+  width: 275px;
+  height: 40px;
+  background-color: white;
+  border-bottom: 1px solid black;
+  display: flex;
+  align-items: center;
+  font-size: 0.8rem;
+  color: black;
+  @include xl {
+    width: 500px;
+    height: 50px;
+    background-color: white;
+    border-bottom: 1px solid black;
+    display: flex;
+    align-items: center;
+    font-size: 0.8rem;
+    color: black;
+  }
+}
